fix da fuckin stupid conflick