@@ -2,7 +2,9 @@ package com.lemon.supershop.swp391fa25evdm.product.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+import com.lemon.supershop.swp391fa25evdm.category.model.entity.DealerCategory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -42,82 +44,122 @@ public class ProductService {
         }
     }
 
-    public void addProduct (ProductReq productReq) {
-        Product product = convertReqToEntity(productReq);
-        productRepo.save(product);
+    public ProductRes addProduct (ProductReq productReq) {
+        Product product = new Product();
+        Product product1 = convertReqToEntity(product, productReq);
+        productRepo.save(product1);
+        return convertToRes(product1);
     }
 
-    public void updateProduct (int id, ProductReq productReq) {
+    public ProductRes updateProduct (int id, ProductReq productReq) {
         Optional<Product> existingProductOpt = productRepo.findById(id);
         if (existingProductOpt.isPresent()) {
-            Product existingProduct = existingProductOpt.get();
-            existingProduct.setName(productReq.getName());
-            existingProduct.setVinNum(productReq.getVinNum());
-            existingProduct.setEngineNum(productReq.getEngineNum());
-            existingProduct.setDescription(productReq.getDescription());
-            existingProduct.setStatus(productReq.getStatus());
-            existingProduct.setImage(productReq.getImage());
-            existingProduct.setDealerPrice(productReq.getDealerPrice());
-            existingProduct.setManufacture_date(productReq.getManufacture_date());
-            categoryRepository.findById(productReq.getCategoryId()).ifPresent(existingProduct::setCategory);
-            dealerCategoryRepository.findById(productReq.getDealerCategoryId()).ifPresent(existingProduct::setDealerCategory);
-            productRepo.save(existingProduct);
+            convertReqToEntity(existingProductOpt.get(), productReq);
+            productRepo.save(existingProductOpt.get());
+            return convertToRes(existingProductOpt.get());
         }
+        return null;
     }
 
-    public List<ProductRes> getProductByCategory(Category category){
-        List<Product> products = productRepo.findByCategory(category);
-        return products.stream().map(this::convertToRes).toList();
+    public List<ProductRes> getProductByCategoryId(int categoryId){
+         return productRepo.findByCategoryId(categoryId).stream().map(product -> {
+            return convertToRes(product);
+        }).collect(Collectors.toList());
     }
 
-    public List<ProductRes> getProductByCategoryId(Integer categoryId){
-        List<Product> products = productRepo.findByCategoryId(categoryId);
-        return products.stream().map(this::convertToRes).toList();
+    public List<ProductRes> getProductByVinNum(String vinNum){
+        return productRepo.findByVinNumContainingIgnoreCase(vinNum).stream().map(product -> {
+            return convertToRes(product);
+        }).collect(Collectors.toList());
     }
 
-    public ProductRes getProductByVinNum(String vinNum){
-        Optional<Product> productOpt = productRepo.findByVinNumIgnoreCase(vinNum);
-        return productOpt.map(this::convertToRes).orElse(null);
+    public List<ProductRes> getProductByName(String name){
+        return productRepo.findByNameContainingIgnoreCase(name).stream().map(product -> {
+            return convertToRes(product);
+        }).collect(Collectors.toList());
     }
 
-    public ProductRes getProductByName(String name){
-        Optional<Product> productOpt = productRepo.findByNameIgnoreCase(name);
-        return productOpt.map(this::convertToRes).orElse(null);
-    }
-
-    public ProductRes getProductByEngineNum(String engineNum){
-        Optional<Product> productOpt = productRepo.findByEngineNumIgnoreCase(engineNum);
-        return productOpt.map(this::convertToRes).orElse(null);
+    public List<ProductRes> getProductByEngineNum(String engineNum){
+        return productRepo.findByEngineNumContainingIgnoreCase(engineNum).stream().map(product -> {
+            return convertToRes(product);
+        }).collect(Collectors.toList());
     }
 
     private ProductRes convertToRes(Product product) {
-        return new ProductRes(
-                product.getId(),
-                product.getName(),
-                product.getVinNum(),
-                product.getEngineNum(),
-                product.getManufacture_date(),
-                product.getImage(),
-                product.getDescription(),
-                product.getStatus(),
-                product.getCategory() != null ? product.getCategory().getId() : null,
-                product.getDealerCategory() != null ? product.getDealerCategory().getId() : null
-        );
+        if (product != null) {
+            ProductRes productRes = new ProductRes();
+            productRes.setId(product.getId());
+            if (product.getName() != null) {
+                productRes.setName(product.getName());
+            }
+            if (product.getVinNum() != null) {
+                productRes.setVinNum(product.getVinNum());
+            }
+            if (product.getEngineNum() != null) {
+                productRes.setEngineNum(product.getEngineNum());
+            }
+            if (product.getDescription() != null) {
+                productRes.setDescription(product.getDescription());
+            }
+            if (product.getStatus() != null) {
+                productRes.setStatus(product.getStatus());
+            }
+            if (product.getImage() != null) {
+                productRes.setImage(product.getImage());
+            }
+            if (product.getManufacture_date() != null){
+                productRes.setManufacture_date(product.getManufacture_date());
+            }
+            if (product.getCategory() != null) {
+                Optional<Category> category = categoryRepository.findById(product.getCategory().getId());
+                if (category.isPresent()) {
+                    productRes.setCategoryId(category.get().getId());
+                }
+            }
+            if (product.getDealerCategory() != null) {
+                Optional<DealerCategory> category = dealerCategoryRepository.findById(product.getDealerCategory().getId());
+                if (category.isPresent()) {
+                    productRes.setDealerCategoryId(category.get().getId());
+                }
+            }
+            return productRes;
+        }
+        return null;
     }
 
     // Convert ProductReq to Product entity using Repository
-    private Product convertReqToEntity(ProductReq productReq) {
-        Product product = new Product();
-        product.setName(productReq.getName());
-        product.setVinNum(productReq.getVinNum());
-        product.setEngineNum(productReq.getEngineNum());
-        product.setDescription(productReq.getDescription());
-        product.setStatus(productReq.getStatus());
-        product.setImage(productReq.getImage());
-        product.setDealerPrice(productReq.getDealerPrice());
-        product.setManufacture_date(productReq.getManufacture_date());
-        categoryRepository.findById(productReq.getCategoryId()).ifPresent(product::setCategory);
-        dealerCategoryRepository.findById(productReq.getDealerCategoryId()).ifPresent(product::setDealerCategory);
+    private Product convertReqToEntity(Product product, ProductReq productReq) {
+        Product product1 = product;
+        if (productReq.getName() != null){
+            product1.setName(productReq.getName());
+        }
+        if (productReq.getVinNum() != null){
+            product1.setVinNum(productReq.getVinNum());
+        }
+        if (productReq.getEngineNum() != null){
+            product1.setEngineNum(productReq.getEngineNum());
+        }
+        if (productReq.getDescription() != null){
+            product1.setDescription(productReq.getDescription());
+        }
+        if (productReq.getStatus() != null){
+            product1.setStatus(productReq.getStatus());
+        }
+        if (productReq.getImage() != null){
+            product1.setImage(productReq.getImage());
+        }
+        if (productReq.getManufacture_date() != null){
+            product1.setManufacture_date(productReq.getManufacture_date());
+        }
+        if (productReq.getDealerPrice() > 0){
+            product1.setDealerPrice(productReq.getDealerPrice());
+        }
+        if (productReq.getCategoryId() > 0){
+            categoryRepository.findById(productReq.getCategoryId()).ifPresent(product::setCategory);
+        }
+        if (productReq.getDealerCategoryId() > 0){
+            dealerCategoryRepository.findById(productReq.getDealerCategoryId()).ifPresent(product::setDealerCategory);
+        }
         return product;
     }
 }
